--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -14247,14 +14247,12 @@ general options (see [[*Export Settings]]).
   #+vindex: org-latex-multi-lang
   #+vindex: org-export-default-language
 
-  The strategy to handle multi-lingual features.  Possible values
-  are ~nil~(default), ~fontspec~, ~polyglossia~ or ~babel~.
-  See more details about setting up multi-language documents in the
-  [[*Handling different languages and character sets in LaTeX
-  exports]] section. Using the =LATEX_MULTI_LANG= option implies
-  setting the ~#+LATEX_MULTI_LANG:~ keyword or the ~org-multi-lang~
+  The strategy to handle multi-lingual features.  Possible values are
+  ~nil~ (default), ~fontspec~, ~polyglossia~ or ~babel~.  See more
+  details about setting up multi-language documents in the [[*Handling
+  different languages and character sets in LaTeX exports]]. You can
+  set the value globally by customizing ~org-latex-multi-lang~
   variable. Setting the keyword supersedes the variable value.
-
 
 - =KEYWORDS= ::
 
